--- a/src/main/resources/templates/admin_CardUpdate.html
+++ b/src/main/resources/templates/admin_CardUpdate.html
@@ -6,9 +6,9 @@
   <title>admin_card register</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
-  <!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>-->
-  <!--    <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>-->
-  <!--    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+      <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>
+      <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 
   <link rel="stylesheet" href="../static/css/header.css" />
@@ -30,27 +30,30 @@
 
 <section>
 
-  <nav id="side_menu">
-    <h4>Menu</h4>
+
+
+  <div class="imageinfo">
+
+    <br><br><br>
+
+
 
     <ul class="nav nav-pills justify-content-end">
       <li>
-        <a href="#"><p >┖ 카드사 목록</p></a>
+        <a href="admin_CardCompanyList" th:href="@{/admin/cardCompany_list_page}"><p >┖ 카드사 목록</p></a>
       </li>
 
       <li>
-        <a href="#"><p>┖ 카드사 등록</p></a>
+        <a href="admin_CardCompanyRegister" th:href="@{/admin/company_regist_page}"><p>┖ 카드사 등록</p></a>
       </li>
 
       <li>
-        <a href="#"><p>┖ 카드 &nbsp; &nbsp;등록</p></a>
+        <a href="admin_CardRegister" th:href="@{/admin/card_regist_page}"><p>┖ 카드등록</p></a>
       </li>
 
     </ul>
 
-  </nav>
 
-  <div class="imageinfo">
     <p></p>
     <h1 class="register">카드 수정</h1>
     <br><br>
