1. 헤더-카드사 연결 2. 카드조건검색 뽑아오기 성공 3. 카드업데이트 textarea 값 수정 중

--- a/src/main/resources/templates/admin_CardUpdate.html
+++ b/src/main/resources/templates/admin_CardUpdate.html
@@ -147,7 +147,7 @@
           </select> <br>
 
           <label>혜택 1 상세</label> <br>
-          <textarea cols="70" maxlength="300"></textarea>
+          <textarea cols="70" maxlength="300" name="benefit1_detail" >[[${cardDto.benefit1_detail}]]</textarea>
           <br><br>
           <label>혜택 2</label>
 
@@ -163,7 +163,7 @@
           </select>  <br>
 
           <label>혜택 2 상세</label> <br>
-          <textarea cols="70" maxlength="300"></textarea>
+          <textarea cols="70" maxlength="300" name="benefit2_detail"></textarea>
           <br><br>
           <label>혜택 3</label>
 
@@ -179,7 +179,7 @@
           </select> <br>
 
           <label>혜택 3 상세</label> <br>
-          <textarea cols="70" maxlength="300"></textarea>
+          <textarea cols="70" maxlength="300" name="benefit3_detail"></textarea>
           <br><br>
 
         </div>
