--- a/src/main/resources/templates/card_company.html
+++ b/src/main/resources/templates/card_company.html
@@ -31,16 +31,16 @@
     }
 
     .slider {
-        width: 50%;
+        width: 1500px;
         margin: 100px auto;
     }
 
     .slick-slide {
-      margin: 0px 20px;
+      margin: 0px 35px;
     }
 
-    .slick-slide img {
-      width: 100%;
+    .slick-slide div {
+      width: 400px;
     }
 
 
@@ -84,9 +84,9 @@
             infinite: true,
             centerMode: true,
             slidesToShow: 3,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 3000
+            slidesToScroll: 1
+<!--            autoplay: true,-->
+<!--            autoplaySpeed: 3000-->
           });
 
         });
@@ -104,47 +104,59 @@
 
                 <section class="center slider">
 
-                    <div>
-                        <img src="../static/images/카드1.png">
+
+                    <div class="oneCompany" th:each="company : ${companyList}">
+                        <a th:href="@{'/find_company/'+${company:companyName}">
+                            <input type="hidden" hidden th:value="${card.companyCode}">
+                            <img class="comLogo" th:src="@{../static/images/} + ${card.companyLogo}" width="100%">
+                            <span name="company" th:value="${card.companyName}"></span>
+                            <img class="cardPic" src="../static/images/카드1.png" width="180px">
+                            <img class="cardPic" src="../static/images/카드2.png" width="180px">
+                            <img class="cardPic" src="../static/images/카드3.png" width="180px">
+                        </a>
                     </div>
 
-                    <div>
-                        <img src="http://placehold.it/350x300?text=2">
+                    <div class="oneCompany" th:each="company : ${companyList}">
+                        <a th:href="@{'/find_company/'+${company:companyName}">
+                            <input type="hidden" hidden th:value="${card.companyCode}">
+                            <img class="comLogo" th:src="@{../static/images/} + ${card.companyLogo}" width="100%">
+                            <span name="company" th:value="${card.companyName}"></span>
+                            <img class="cardPic" src="../static/images/카드1.png" width="180px">
+                            <img class="cardPic" src="../static/images/카드2.png" width="180px">
+                            <img class="cardPic" src="../static/images/카드3.png" width="180px">
+                        </a>
                     </div>
 
-                    <div>
-                        <img src="http://placehold.it/350x300?text=3">
-                    </div>
-
-                    <div>
-                        <img src="http://placehold.it/350x300?text=4">
-                    </div>
-
-                    <div>
-                        <img src="http://placehold.it/350x300?text=5">
-                    </div>
-
-                    <div>
-                        <img src="http://placehold.it/350x300?text=6">
-                    </div>
-
-                    <div>
-                        <img src="http://placehold.it/350x300?text=7">
-                    </div>
-
-                    <div>
-                        <img src="http://placehold.it/350x300?text=8">
-                    </div>
-
-                    <div>
-                        <img src="http://placehold.it/350x300?text=9">
-                    </div>
 
                 </section>
 
+                <div id="finCompanyList" th:each="card : ${thisCardlist}">
+                    <h2 th:text="${card.cardCompany}">신한카드</h2>
+                    <ul>
+                        <li id="onecard">
+                            <!-- list반복문 : th:each="변수명 : ${받은 모델명}" -->
+
+                            <img th:src="@{../static/images/} + ${card.cardPhoto}"> <!--사진-->
+                            <div class="text">
+                                <p class="name" th:text="${card.cardName}"></p> <!--카드이름-->
+                                <p th:text="${card.cardCompany}"></p> <!--카드사-->
+                            </div>
+                            <div class="benefits">
+                                <div class="icon"><img th:src="@{../static/images/} + ${card.benefit1}"> </div>   <!--혜택1 아이콘-->
+                                <div class="icon"><img th:src="@{../static/images/} + ${card.benefit2}"> </div>
+                                <div class="icon"><img th:src="@{../static/images/} + ${card.benefit3}"> </div>
+                            </div>
+                            <a href="card_detail.html" th:href="@{'/card_detail_page/'+${card.cardCode}}" class="more"> 상세 보기</a>
+                            <div class="condition">
+                                <p>연회비 <span th:text="${card.annualFee}"></span>원 | 전월 실적 <span th:text="${card.beforePay}"></span>원</p>
+                                <a href="card_compare.html" th:href="@{/card/card_compare_page}">  <img src="../static/images/add.png">  <p class="cart"> 비교함 담기</p></a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
 
 
-                <div class="clear"></div>
+
             </div>
 
 
