th:replace 슬래시제거

--- a/src/main/resources/templates/board_detail.html
+++ b/src/main/resources/templates/board_detail.html
@@ -24,7 +24,7 @@
 
 <body>
 
-<th:block th:replace = "/header :: header"></th:block>
+<th:block th:replace = "header :: header"></th:block>
 <div class="container">
 
     <input type="hidden" id="id" th:value="${postDto.bbsID}">
@@ -91,6 +91,6 @@
 
 
 <br><br><br><br><br>
-<th:block th:replace = "/footer :: footer"></th:block>
+<th:block th:replace = "footer :: footer"></th:block>
 </body>
 </html>
