--- a/src/main/resources/templates/board_update.html
+++ b/src/main/resources/templates/board_update.html
@@ -24,7 +24,7 @@
 
 <body>
 
-<th:block th:replace = "/header :: header"></th:block>
+<th:block th:replace = "header :: header"></th:block>
 
 <div class="container">
 
@@ -72,7 +72,7 @@
 </div>
 
 
-<th:block th:replace = "/footer :: footer"></th:block>
+<th:block th:replace = "footer :: footer"></th:block>
 
 
 </body>
