--- a/src/main/resources/templates/card_chart.html
+++ b/src/main/resources/templates/card_chart.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <th:block th:replace = "/header :: header"></th:block>
+    <th:block th:replace = "header :: header"></th:block>
 
 
     <div id="chartWrap">
@@ -166,7 +166,7 @@
         }
     </script>
 
-    <th:block th:replace = "/footer :: footer"></th:block>
+    <th:block th:replace = "footer :: footer"></th:block>
 
     <!--슬릭 스크립트/소스-->
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
