--- a/src/main/resources/templates/card_company.html
+++ b/src/main/resources/templates/card_company.html
@@ -71,7 +71,7 @@
 
 <body>
 
-<th:block th:replace = "/header :: header"></th:block>
+<th:block th:replace = "header :: header"></th:block>
 
 
 
@@ -153,7 +153,7 @@
 
 
 
-<th:block th:replace = "/footer :: footer"></th:block>
+<th:block th:replace = "footer :: footer"></th:block>
 
 </body>
 </html>
