--- a/src/main/resources/templates/card_detail.html
+++ b/src/main/resources/templates/card_detail.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <th:block th:replace = "/header :: header"></th:block>
+    <th:block th:replace = "header :: header"></th:block>
 
 
     <div id="detailWrap">
@@ -75,7 +75,7 @@
 
     </div>
 
-    <th:block th:replace = "/footer :: footer"></th:block>
+    <th:block th:replace = "footer :: footer"></th:block>
 
 </body>
 </html>
