--- a/src/main/resources/templates/cards.html
+++ b/src/main/resources/templates/cards.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<th:block th:replace = "/header :: header"></th:block>
+<th:block th:replace = "header :: header"></th:block>
 
         <div class="cards-title">
            <h1>CARD24 에서 추천하는 카드사</h1>
@@ -35,7 +35,7 @@
             <img width="850px" height="250px" src="../static/images/cardsG.jpg">
         </div>
 
-<th:block th:replace = "/footer :: footer"></th:block>
+<th:block th:replace = "footer :: footer"></th:block>
 
 </body>
 </html>
