--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <th:block th:replace = "/header :: header"></th:block>
+    <th:block th:replace = "header :: header"></th:block>
 
     <div id="main_wrap">
 
@@ -91,7 +91,7 @@
 
     </div>
 
-    <th:block th:replace = "/footer :: footer"></th:block>
+    <th:block th:replace = "footer :: footer"></th:block>
 
 </body>
 </html>
