--- a/src/main/resources/templates/cardSearch.html
+++ b/src/main/resources/templates/cardSearch.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <th:block th:replace = "/header :: header"></th:block>
+    <th:block th:replace = "header :: header"></th:block>
 
 
     <div id="searchWrap">
@@ -87,7 +87,7 @@
     </div>
 
 
-    <th:block th:replace = "/footer :: footer"></th:block>
+    <th:block th:replace = "footer :: footer"></th:block>
     <script>
         //혜택박스 배열 선언
          var beAry = [ $('input[name=inbene0]'), $('input[name=inbene1]') , $('input[name=inbene2]') ];
