--- a/src/main/resources/templates/card_list.html
+++ b/src/main/resources/templates/card_list.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <th:block th:replace = "/header :: header"></th:block>
+    <th:block th:replace = "header :: header"></th:block>
 
 
     <div id="chartWrap">
@@ -142,7 +142,7 @@
     </script>
 
 
-    <th:block th:replace = "/footer :: footer"></th:block>
+    <th:block th:replace = "footer :: footer"></th:block>
 
 </body>
 </html>
