--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<th:block th:replace = "/header :: header"></th:block>
+<th:block th:replace = "header :: header"></th:block>
 
 <br>
 <br>
