[수정] 카드조건검색 - 선택한 조건에 맞는 카드만 출력 수정완료, 리셋버튼 수정완료

--- a/src/main/resources/templates/cardSearch.html
+++ b/src/main/resources/templates/cardSearch.html
@@ -64,18 +64,18 @@
 
                     <div id="submit">
                         <input type="submit" value="검색">
-                        <input type="button" value="초기화">
+                        <input type="reset" value="초기화">
                     </div>
 
 
                     <!-- 선택값 넘겨주기 -->
-                    <input type="hidden" name="ingender">
-                    <input type="hidden" name="inage">
-                    <input type="hidden" name="intype">
+                    <input type="value" name="ingender">
+                    <input type="value" name="inage">
+                    <input type="value" name="intype">
 
-                    <input type="hidden" name="inbene0">
-                    <input type="hidden" name="inbene1">
-                    <input type="hidden" name="inbene2">
+                    <input type="value" name="inbene0" value="">
+                    <input type="value" name="inbene1" value="">
+                    <input type="value" name="inbene2" value="">
 
 
                         <img class="abb" src="../static/images/광고3.png" >
